<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright (c) 2020-2021 CertifAI Sdn. Bhd.
  ~
  ~  This program and the accompanying materials are made available under the
  ~  terms of the Apache License, Version 2.0 which is available at
  ~  https://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~  License for the specific language governing permissions and limitations
  ~  under the License.
  ~
  ~  SPDX-License-Identifier: Apache-2.0
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ai.classifai</groupId>
    <artifactId>classifai</artifactId>
    <packaging>pom</packaging>
    <version>2.0.0</version>

    <modules>
        <module>classifai-core</module>
        <module>classifai-api</module>
        <module>classifai-uberjar</module>
        <!--<module>classifai-test</module>-->
    </modules>

    <name>classifai</name>
    <description>
        The most comprehensive open-source data annotation toolkit
    </description>
    <url>http://classifai.ai/</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>codenamewei</id>
            <name>Chiawei Lim</name>
        </developer>
        <developer>
            <id>BobbyLCW</id>
            <name>Bobby Lee Chun Wei</name>
        </developer>
        <developer>
            <id>Toh</id>
            <name>Toh Sie Hung</name>
        </developer>
        <developer>
            <id>Daniel</id>
            <name>Daniel Lim Heng Jie</name>
        </developer>
    </developers>

    <properties>
        <vertx.version>3.9.0</vertx.version>
        <junit.version>4.13.1</junit.version>
        <lombok.version>1.18.12</lombok.version>
        <slf4j.version>1.7.30</slf4j.version>
        <hsqldb.version>2.5.1</hsqldb.version>
        <jbig.version>3.0.3</jbig.version>
        <fontbox.version>2.0.20</fontbox.version>
        <jai.imageio.version>1.3.0</jai.imageio.version>
        <flatlaf.version>0.43</flatlaf.version>
        <commons.io.version>2.6</commons.io.version>
        <pdfbox.version>2.0.21</pdfbox.version>
        <logback.version>1.2.3</logback.version>
        <org.json.version>20190722</org.json.version>
        <google.json.version>1.1.1</google.json.version>
        <commons.collections4.version>4.1</commons.collections4.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
        <apache.commons.version>3.8.1</apache.commons.version>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <classifai.release.version>2.0.0</classifai.release.version>
        <classifai.release.name>dev</classifai.release.name>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ai.classifai</groupId>
                <artifactId>classifai-uberjay</artifactId>
                <version>${classifai.release.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.classifai</groupId>
                <artifactId>classifai-core</artifactId>
                <version>${classifai.release.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.classifai</groupId>
                <artifactId>classifai-api</artifactId>
                <version>${classifai.release.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-core</artifactId>
                <version>${vertx.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-jdbc-client</artifactId>
                <version>${vertx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-web</artifactId>
                <version>${vertx.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-unit</artifactId>
                <version>${vertx.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>${flatlaf.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-web-client</artifactId>
                <version>${vertx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>${hsqldb.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${org.json.version}</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.json-simple</groupId>
                <artifactId>json-simple</artifactId>
                <version>${google.json.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache.commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons.collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>fontbox</artifactId>
                <version>${fontbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox-tools</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>jbig2-imageio</artifactId>
                <version>${jbig.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.jai-imageio</groupId>
                <artifactId>jai-imageio-jpeg2000</artifactId>
                <version>${jai.imageio.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>test</id>
            <modules>
                <module>classifai-test</module>
            </modules>
        </profile>
        <profile>
            <id>uberjar</id>
            <modules>
                <module>classifai-uberjar</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven-shade-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>